[package]
name = "nexus-remote-embedded-rs"
version = "0.0.1"
edition = "2021"
description = "Embedded-friendly remote transport primitives for Nexus"
license = "MIT OR Apache-2.0"
keywords = ["nexus", "actor", "remote", "embedded"]
categories = ["concurrency", "embedded"]
readme = "../../README.md"
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[features]
default = ["std", "alloc"]
std = []
alloc = []

[dependencies]
nexus-remote-core-rs = { path = "../remote-core", default-features = false, features = ["alloc"] }

[dev-dependencies]
futures = { workspace = true }
nexus-actor-core-rs = { path = "../actor-core", default-features = false, features = ["alloc"] }
