[package]
name = "nexus-utils-embedded-rs"
version = "0.0.1"
edition = "2021"
description = "Embassy-oriented async primitives for Nexus"
license = "MIT OR Apache-2.0"
keywords = ["async", "embedded", "mutex"]
categories = ["concurrency", "embedded"]
readme = "../../README.md"
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[features]
default = ["embassy"]
embassy = ["dep:embassy-sync", "dep:embassy-time", "dep:critical-section", "dep:embassy-futures"]

[dependencies]
embassy-sync = { version = "0.7", default-features = false, optional = true }
embassy-time = { version = "0.5", default-features = false, optional = true }
critical-section = { version = "1.2", optional = true }
embassy-futures = { version = "0.1", default-features = false, optional = true }
nexus-utils-core-rs = { path = "../utils-core", default-features = false, features = ["alloc"] }

[dev-dependencies]
static_assertions = { workspace = true }
